updated style file to fix get resume and get in touch buttons that overflow thier containers

--- a/styles/style.css
+++ b/styles/style.css
@@ -393,6 +393,12 @@
     margin-bottom: 20px;
   }
 
+  .action_3 {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
   .btn {
     display: flex;
     flex-direction: row;
@@ -404,6 +410,8 @@
     color: white;
     border-radius: 4px;
     margin-bottom: 10px;
+    padding: 12px;
+    width: 40%;
   }
 
   .btn:hover {
@@ -420,7 +428,6 @@
     font-size: 17px;
     line-height: 24px;
     letter-spacing: 0.03em;
-    padding: 12px;
   }
 
   .about_me .about {
@@ -826,6 +833,10 @@
     background-image: url(../images/illustration-about-me-2-desktop.png);
     background-size: contain;
     background-repeat: no-repeat;
+  }
+
+  .btn {
+    width: calc(10% + 100px);
   }
 
   .about_me h1 {
